data/derived/comb/progs/unify/prog4582.ml.out
Characters 56-57:
  |(x,true) -> wwhile(f x)
                      ^
Error: This expression has type 'a * bool
       This is not a function; it cannot be applied.
